--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: "git-wiki-skeleton"
 # with your folder name, otherwise leave it empty
 baseurl: "/git-wiki-skeleton"
 # (string) Description of your wiki
-description:
+description: Wiki for the /r/htpc sub-reddit
 # (boolean) disable edit functionalities (edit/delete/add pages)
 disable_edit: false
 # (boolean) Enable/disable wiki page list in sidebar
