--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "/r/htpc Wiki"
 # (string) if you've installed your wiki in subfolder, you must change this configuration
 # with your folder name, otherwise leave it empty
 #baseurl: "/git-wiki-skeleton"
-baseurl:
+baseurl: "/htpc-wiki'
 # (string) Description of your wiki
 description: Wiki for the /r/htpc sub-reddit
 # (boolean) disable edit functionalities (edit/delete/add pages)
@@ -28,7 +28,7 @@ show_downloads: true
 # (string) Specify branch rendered by gitpages allowing wiki tool buttons to work
 git_branch: "master"
 # (string) Url of logo image, it can be full, absolute or relative.
-logo_url: 
+logo_url: "assets/images/logo.png"
 # (string) The UA-XXXXX-Y code from google analytic to enable GA on your wiki
 google_analytics: 
 # (string) folder where wiki pages are stored, it's needed for tool buttons
