--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "/r/htpc Wiki"
 # (string) if you've installed your wiki in subfolder, you must change this configuration
 # with your folder name, otherwise leave it empty
 #baseurl: "/git-wiki-skeleton"
-baseurl: "/htpc-wiki'
+baseurl: "/htpc-wiki"
 # (string) Description of your wiki
 description: Wiki for the /r/htpc sub-reddit
 # (boolean) disable edit functionalities (edit/delete/add pages)
